# snifferplusplus

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  readme.md
src/: Packet.cpp  Packet.hpp  main.cpp  socket.cpp
src/socket/: IRawSocket.h  RawSocket.h  RawSocketFactory.h
src/socket/linux/: LinuxRawSocket.cpp  LinuxRawSocket.h
src/socket/macos/: MacRawSocket.cpp  MacRawSocket.h
